# XMFaceDect

./: CMakeLists.txt  IPC1_Live.py  IPC1_Server_FFMpeg  IPC2_Live.py  IPC2_Server_FFMpeg  README.md  cmdFaceDect.txt  streamVideo.cpp  transport.sh
backup/: (BBBK)xm_classifier_webcam_server.py  IPC1_Live.py.bk  IPC1_Live.py.clip.back  IPC1_simple.pkl  IPC1_simple.pkl.20181119.bk
models/face/: IPC2_simple.pkl
server_stream/: CMakeLists.txt  streamVideo.cpp
